--- a/package.json
+++ b/package.json
@@ -15,5 +15,5 @@
   "bugs": {
     "url": "https://github.com/vosap2007/resume/issues"
   },
-  "homepage": "https://github.com/vosap2007/resume#index"
+  "homepage": "https://github.com/vosap2007/resume#index.html"
 }
